force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <label>Booking</label>
    <pluralLabel>Bookings</pluralLabel>
    <nameField>
        <displayFormat>BK-{000000}</displayFormat>
        <label>Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Reserva de cliente.</description>
</CustomObject>