force-app/main/default/objects/Booking__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Contact Name</label>
    <type>Text</type>
    <length>120</length>
</CustomField>