force-app/main/default/objects/Booking__c/fields/Integration_Platform__c.field-meta.xml
<CustomField>
    <fullName>Integration_Platform__c</fullName>
    <label>Integration Platform</label>
    <type>Text</type>
    <length>40</length>
</CustomField>