force-app/main/default/objects/Booking__c/fields/Last_Event_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Event_At__c</fullName>
    <label>Last Event At</label>
    <type>DateTime</type>
</CustomField>