force-app/main/default/objects/Booking__c/fields/Platform_Reference__c.field-meta.xml
<CustomField>
    <fullName>Platform_Reference__c</fullName>
    <label>Platform Reference</label>
    <type>Text</type>
    <length>80</length>
    <externalId>true</externalId>
</CustomField>