force-app/main/default/objects/Booking__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Bookings</relationshipName>
    <relationshipLabel>Bookings</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>