force-app/main/default/objects/Booking__c/fields/Product_Subfamily__c.field-meta.xml
<CustomField>
    <fullName>Product_Subfamily__c</fullName>
    <label>Product Subfamily</label>
    <type>Text</type>
    <length>80</length>
</CustomField>