force-app/main/default/objects/Booking__c/fields/Purchase_Group__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Group__c</fullName>
    <label>Purchase Group</label>
    <type>Lookup</type>
    <referenceTo>Purchase_Group__c</referenceTo>
    <relationshipName>Bookings</relationshipName>
    <relationshipLabel>Bookings</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>