force-app/main/default/objects/Booking__c/fields/Supplier_Reference__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Reference__c</fullName>
    <label>Supplier Reference</label>
    <type>Text</type>
    <length>80</length>
</CustomField>