force-app/main/default/objects/Booking__c/fields/Voucher_Url__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Url__c</fullName>
    <label>Voucher Url</label>
    <type>Url</type>
</CustomField>